# hfppl

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  codecov.yml  gen_reference_page.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py
.github/workflows/: ci.yml  docs.yml  poetry-build.yml  release.yml  test-import.yml  tests.yml
anatomy/: index.html
batching/: index.html
benchmark/: benchmark_backend.py
caching/: index.html
docs/: anatomy.md  batching.md  caching.md  gen_reference_page.py  getting_started.md  immutability.md  index.md  performance.md  ref_inference.md  transformers.md  visualization.md
examples/: force_vocab.py  grammar_constraint.py  haiku.py  hard_constraints.py  infilling.py  infilling_phrase.py
genlm/llamppl/: __init__.py  chunks.py  llms.py  modeling.py  util.py
genlm/llamppl/distributions/: __init__.py  logcategorical.py  transformer.py
genlm/llamppl/inference/: __init__.py  smc_record.py  smc_standard.py
getting_started/: index.html
hfppl/: __init__.py  chunks.py  llms.py  model.py  modeling.py  util.py
hfppl/distributions/: __init__.py  bernoulli.py  distribution.py  geometric.py  lmcontext.py  logcategorical.py  statefullm.py  tokencategorical.py  transformer.py
hfppl/inference/: __init__.py  smc_record.py  smc_standard.py  smc_steer.py
html/: smc.html
html/results/: haiku.json  infilling.json  infilling_sis.json  output.json
immutability/: index.html
performance/: index.html
reference/SUMMARY/: index.html
reference/hfppl/__init__/: index.html
reference/hfppl/chunks/: index.html
reference/hfppl/distributions/__init__/: index.html
reference/hfppl/distributions/bernoulli/: index.html
reference/hfppl/distributions/distribution/: index.html
reference/hfppl/distributions/geometric/: index.html
reference/hfppl/distributions/lmcontext/: index.html
reference/hfppl/distributions/logcategorical/: index.html
reference/hfppl/distributions/tokencategorical/: index.html
reference/hfppl/distributions/transformer/: index.html
reference/hfppl/inference/__init__/: index.html
reference/hfppl/inference/smc_record/: index.html
reference/hfppl/inference/smc_standard/: index.html
reference/hfppl/inference/smc_steer/: index.html
reference/hfppl/llms/: index.html
reference/hfppl/modeling/: index.html
reference/hfppl/util/: index.html
search/: search_index.json
tests/: test_examples.py  test_lmcontext.py
transformers/: index.html
visualization/: index.html
