[tool.poetry]
name = "hfppl"
version = "0.1.0"
description = "Probabilistic programming with HuggingFace Transformer models."
authors = [
    "Alex Lew <alexlew@mit.edu>",
    "Gabriel Grand <grandg@mit.edu>",
]
license = "MIT"
readme = "README.md"
packages = [{include = "hfppl"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.2"
numpy = "^1.26.2"
transformers = "^4.36.2"
bitsandbytes = "^0.41.3.post2"
accelerate = "^0.25.0"
sentencepiece = "^0.1.99"
scipy = "^1.11.4"
protobuf = "^5.27.2"
nltk = {version = "^3.8.1", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.12.1"
pre-commit = "^3.6.0"
jupyterlab = "^4.0.9"
ipywidgets = "^8.1.1"
matplotlib = "^3.9.1"


[tool.poetry.group.yelp.dependencies]
yake = "^0.4.8"
datasets = "^2.20.0"


[tool.poetry.group.collie.dependencies]
collie-bench = "^0.1.0"
nltk = "^3.8.1"
dill = "^0.3.8"

[tool.poetry.extras]
examples=["nltk"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
