[tool.poetry]
name = "hfppl"
version = "0.2.0"
description = "Probabilistic programming with HuggingFace Transformer models."
authors = [
    "Alex Lew <alexlew@mit.edu>",
    "Gabriel Grand <grandg@mit.edu>",
    "Ben LeBrun <lebrunb@mit.edu>",
]
license = "MIT"
readme = "README.md"
packages = [{include = "hfppl"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.2"
numpy = "^1.26.2"
scipy = "^1.11.4"
protobuf = "^5.27.2"
nltk = {version = "^3.8.1", optional = true}
pre-commit = "^3.7.1"
ipykernel = "^6.29.5"
genlm-backend = { git = "git@github.com:probcomp/genlm-backend.git" }

[tool.poetry.group.vllm]
optional = true

[tool.poetry.group.vllm.dependencies]
vllm = "^0.6.6"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-benchmark = "*"
black = "^23.12.1"
pre-commit = "^3.6.0"
jupyterlab = "^4.0.9"
ipywidgets = "^8.1.1"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"


[tool.poetry.group.yelp.dependencies]
yake = "^0.4.8"
datasets = "^2.20.0"


[tool.poetry.group.collie.dependencies]
collie-bench = "^0.1.0"
nltk = "^3.8.1"
dill = "^0.3.8"
evaluate = "^0.4.2"

[tool.poetry.extras]
examples=["nltk"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
