[project]
name = "genlm-llamppl"
dynamic = ["version"]
description = "Probabilistic programming with Language Models."
authors = [
    {name = "Alex Lew", email = "alexlew@mit.edu"},
    {name = "Gabriel Grand", email = "grandg@mit.edu"},
    {name = "Ben LeBrun", email = "benlebrun1@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.2",
    "numpy>=1.26.2",
    "scipy>=1.11.4",
    "protobuf>=5.27.2",
    "pre-commit>=3.7.1",
    "ipykernel>=6.29.5",
    "genlm-backend @ git+https://github.com/genlm/backend.git@main",
]

[project.optional-dependencies]
examples = ["nltk>=3.8.1"]
vllm = ["vllm>=0.6.6"]
dev = [
    "pytest",
    "pytest-benchmark",
    "pytest-cov",
    "pre-commit>=3.6.0",
    "ruff>=0.9.9",
    "jupyterlab>=4.0.9",
    "ipywidgets>=8.1.1",
    "matplotlib>=3.9.1",
    "seaborn>=0.13.2",
]
yelp = [
    "yake>=0.4.8",
    "datasets>=2.20.0",
]
collie = [
    "collie-bench>=0.1.0",
    "nltk>=3.8.1",
    "dill>=0.3.8",
    "evaluate>=0.4.2",
]

[build-system]
requires = ["setuptools>=61.0.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["genlm*"]

[tool.setuptools_scm]
